--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/zhrln/datauri#readme",
   "dependencies": {
-    "mime": "^1.3.4"
+    "commander": "^2.9.0",
+    "mime": "^1.3.4",
+    "temp": "^0.8.3"
   }
 }
