--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "datauri",
+  "name": "ngm-datauri",
   "version": "1.0.0",
   "description": "生成datauri的工具",
-  "main": "app.js",
+  "main": "lib.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node app -V"
   },
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
     "base64",
     "nodejs"
   ],
-  "author": "zhangrui",
+  "author": "ngaamging",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zhrln/datauri/issues"
